---------------------------------------------------------------------------------------------------
Version: 0.17.0
Date: 28. 2. 2018
  Changes:
    - Initial version, only ensures loading with vanilla
    - Default settings for millitary is now tier2 due increased bitter difficulty
---------------------------------------------------------------------------------------------------
Version: 0.16.49
Date: 18. 11. 2018
  Changes:
    - fixed bobs lab mk2 technology localization
    - removed relic recipe file
---------------------------------------------------------------------------------------------------
Version: 0.16.48
Date: 13. 11. 2018
  Changes:
    - Added japanese locale (by shelaf)
    - fixed bobs alien lab technology enable condition
    - reduced ammount of waste byproduct to prevent overproduction of raw materials (producing more raw that was input)
    - fixed alien lab technology localization
---------------------------------------------------------------------------------------------------
Version: 0.16.47
Date: 1. 8. 2018
  Changes:
    - Removed unneccesary AAI basic logistic tech dependency, when bobs belt overhaul is present
---------------------------------------------------------------------------------------------------
Version: 0.16.46
Date: 28. 7. 2018
  Changes:
    - Expensive mode recipes rebalance
---------------------------------------------------------------------------------------------------
Version: 0.16.45
Date: 20. 7. 2018
  Changes:
    - Xander mod compatibility
---------------------------------------------------------------------------------------------------
Version: 0.16.44
Date: 8. 7. 2018
  Changes:
    - increased t2 (120k->150k). t3(300k->500k) lab power consumption
  Bugfixes:
    - omnimatter_water with aai+py (imposible t1 research due lack of water)
---------------------------------------------------------------------------------------------------
Version: 0.16.43
Date: 5. 7. 2018
  Changes:
    - lib functions