@@ -89,7 +89,7 @@ data:extend({
 			{
 				{"automation-science-pack", 1},
 			},
-			time = 2,
+			time = 5,
 		},
 		order = "sct-lab-b[t2]",
 	},
@@ -159,7 +159,7 @@ data:extend({
 				{"automation-science-pack", 1},
 				{"logistic-science-pack", 1},
 			},
-			time = 3,
+			time = 10,
 		},
 		order = "sct-lab-c[t3]",
 	},
@@ -216,7 +216,7 @@ data:extend({
 				{"logistic-science-pack", 1},
 				{"chemical-science-pack", 1},
 			},
-			time = 4,
+			time = 40,
 		},
 		order = "sct-lab-d[t4]",
 	},
